oop_mro/tests/trybuild/fail_unsupported_method.stderr
error: const methods are not supported
 --> tests/trybuild/fail_unsupported_method.rs:5:9
  |
5 |         const fn speak(&self) -> String {
  |         ^^^^^
